--- a/views/estimate.haml
+++ b/views/estimate.haml
@@ -1,6 +1,16 @@
-%strong=area
-%strong=disability
-%strong=year
-%strong=disab_total
-%strong=pop_total
-%strong=percentage
+%table
+  %tbody
+    %tr
+      %th Area
+      %th Disability
+      %th Year
+      %th Total population with disability
+      %th Percentage of population with disability
+      %th Total population size for area
+    %tr
+      %td=area
+      %td=disability
+      %td=year
+      %td=disab_total
+      %td=percentage
+      %td=pop_total
