explanation of the REST interface. Display the base url in the web page index.

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,4 +1,4 @@
-Small area estimation for disabilities in the UK. Send a GET request to url /{area}/{disability}{year}.
+For REST service send a GET request to #{request.url}{area}/{disability}{year}.
 %form{:action => "run", :method => "post"}
   %select{:name=>"zone"}
     - zones.each do |i|
