styling with css yui grids and menu show maptube page in iframe logos in header and footer

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,12 +1,13 @@
-For REST service send a GET request to #{request.url}{area}/{disability}{year}.
-%form{:action => "run", :method => "post"}
-  %select{:name=>"zone"}
-    - zones.each do |i|
-      %option{:value => i}= i
-  %select{:name=>"year"}
-    - years.each do |i|
-      %option{:value => i}= i
-  %select{:name=>"disability"}
-    - disabilities.each do |i|
-      %option{:value => i}= i
-  %input{:type => "submit", :value => "Run"}
+%center
+  For REST service send a GET request to #{request.url}{area}/{disability}{year}.
+  %form{:action => "run", :method => "post"}
+    %select{:name=>"zone"}
+      - zones.each do |i|
+        %option{:value => i}= i
+    %select{:name=>"year"}
+      - years.each do |i|
+        %option{:value => i}= i
+    %select{:name=>"disability"}
+      - disabilities.each do |i|
+        %option{:value => i}= i
+    %input{:type => "submit", :value => "Run"}
