links to statistical scripts on methodbox

--- a/views/index.haml
+++ b/views/index.haml
@@ -14,5 +14,11 @@
   %BR
   For REST service send a GET request to #{request.url}{area}/{disability}{year}.
   %BR
-  Or download the data for 2021 from 
-  %a(href="https://www.methodbox.org/Data_File/458-2021-uk-disability-estimates/download") MethodBox
+  Or
+  %a(href="https://www.methodbox.org/Data_File/458-2021-uk-disability-estimates/download") download
+  the data for 2021 from MethodBox
+  %BR
+  For more information on the statistical methods and data used refer to the
+  %a(href="https://www.methodbox.org/scripts/69-preparing-hse-2000-data-for-disability-prevalence-statistics") scripts
+  on
+  %a(href="https://www.methodbox.org/scripts/69-preparing-hse-2000-data-for-disability-prevalence-statistics") MethodBox
