use 2.4 server and client lib

--- a/views/no_configuration.haml
+++ b/views/no_configuration.haml
@@ -1,3 +1,6 @@
 %p
-  Unable to contact the server.  Please check the
+  Unable to create the server.  Please check the
   %a{:href => "/configuration"}configuration
+  %BR
+  The error is:
+  %p=$e
